# music-lyrics-llm-analysis

./: README.md  pyproject.toml
configs/: scrape.yaml
configs/riaa/: scrape.yaml
data/artists/: artists.parquet
data/raw/: billboard.parquet  riaa.parquet
data/riaa/: riaa_data.parquet
data/songs/: songs.parquet
docs/: pipeline.md
music_lyrics_llm_analysis/scrape/: scrape_artist_data.py
output/scrape/: gpt_artist_extended.json
prompts/: summarize.yaml
prompts/cleaning/: riaa_artists.yaml
scripts/embeddings/: get_embeddings.py  get_summaries.py
scripts/scrape/: scrape_billboard.py  scrape_genius.py  scrape_riaa.py
src/scrape/: scrape_riaa.py
