[project]
name = "music-lyrics-llm-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "gabrielsgaspar",email = "gabrielsgaspar@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "numpy (<2)",
    "unidecode (>=1.4.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openai (==1.55.3)",
    "google-cloud-storage (>=3.3.0,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "torch (==2.2.2)",
    "transformers (>=4.55.4,<5.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
